--- a/exercicio02/style.css
+++ b/exercicio02/style.css
@@ -1,10 +1,32 @@
 .lista img{
     width: 150px;
-    height: 200px;
-    margin-top: 50px;
+    height: 150px;
+    margin-top: 10px;
+    display: inline-flex;
 }
 .imagem-banner{
     width: 100vw;
     height: 400px;
-    object-fit: cover;
+    object-fit: contain;
+}
+.card { 
+    background-color: rgb(224, 213, 235);
+    box-shadow: inset 0 0 8px rgb(114, 8, 8);
+    margin: 50px;
+    width: 300px;
+    margin-inline-start: 20px;
+    justify-content: baseline;
+    align-items: center;
+    text-align: center;
+    display: inline-flex;
+    flex-flow: column wrap;
+    height: 300px;
+    border-radius: 10px 10px;
+}
+.precos {
+    border-radius: 15px 30px;
+    padding: 10px 20px;
+    color: rgb(0, 0, 0);
+    margin-top: 30px;
+    background-color: rgb(216, 53, 48);
 }
